CSS: fix logo, search, account, content wrap.

--- a/deerfield.css
+++ b/deerfield.css
@@ -1,9 +1,8 @@
 /*#header { background: url(images/DD_banner_large.jpg) no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; border-bottom: solid #333 42px; }*/
 #header { position: relative; margin-bottom: 0; box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; }
 
-.header-logo { float: none; height: 80px; }
+.header-logo { float: none; height: 80px; width: 225px; margin: 0 auto; }
 .header-logo img { max-height: none; }
-img#storelogoimage { display: block !important; }
 #store-logo { width: inherit; height: inherit; }
 
 .tagline h2, .tagline p { color: white; text-align:center; font-family: "montserratReg",Helvetica,Arial,Verdana,sans-serif; }
@@ -14,18 +13,19 @@ img#storelogoimage { display: block !important; }
 .header-nav > ul > li > a:hover { color: black; }
 .header-nav .has-subnave.active { color: white; }
 
-.header-account { position: absolute; top: -20; clear: none; float: none; margin: 0; }
+.header-account { position: absolute; top: -20px; clear: none; float: none; margin: 0; }
 .header-account a { color: white; }
 .header-account a:hover { color: lightgrey; }
 
 form#searchForm .form-group { border-radius: 20px; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-color: lightgrey; }
-#input-search { color: white; }
+#input-search { color: #393939; }
 
 .page-header { border: none; }
 
 #footer { background: white; }
 
 body.home { background-position-y: 180px; background-color: white; }
+.home .page-content-wrap { position: relative; }
 @media screen and (max-width: 835px) {
 	h1.header-logo { margin: 0 auto; }
 	#header { border-bottom: solid #333 8px; }
@@ -35,7 +35,7 @@ body.home { background-position-y: 180px; background-color: white; }
 	.logged-in #header { height: 372px; }
 	#header-wrap { height: 153px; }
 	/*#mobile-nav-wrap { position: absolute; bottom: 0; width: 100%; }*/
-        nav.header-nav { position: absolute; bottom: 0; width: 100%; }
+        nav.header-nav { position: absolute; bottom: 0; width: 52em; }
 	.header-main-nav { top: 247px; z-index: 500; }
 	.tagline { position: absolute; right: 0; font-size: 1.3em; top: 38px; }
 	.header-search .form-group { background: rgba(255, 255, 255, .2); border: solid 1px rgba(3, 27, 127, .3); }
@@ -86,7 +86,7 @@ body.home { background-position-y: 180px; background-color: white; }
   .home > .container a.btn-primary.btn { text-transform: uppercase; font-weight: bold; font-size: 2em; }
   .home > .container ul { width: 28em; top: 56px; right: 0; }
   .home > .container ul li { font-size: 18px; line-height: 22px; text-shadow: 0px 2px 4px rgba(0,0,0,0.50) }
-  .home > .container p { bottom: 20px; right: 0; font-size: 22px; width: 18em; text-shadow: 0px 2px 4px rgba(0,0,0,0.50) }
+  .home > .container p { bottom: 20px; right: 0; font-size: 22px; width: 15em; text-shadow: 0px 2px 4px rgba(0,0,0,0.50) }
 }
 #footer-callout { display: none; }
 /*
